--- a/members_and_activities.html
+++ b/members_and_activities.html
@@ -15,7 +15,9 @@
 <link rel="stylesheet" href="CSS/Kevin/unsemantic-grid-responsive-tablet.css">
 <link rel="stylesheet" href="CSS/Kevin/style.css">
  
-
+  <!-- Tab icon -->
+  <link rel="shortcut icon" type="image/x-icon" href="https://de.catbox.moe/or3ctq.ico">
+  
  <!-- Title -->
   <title>RGU Sports Society</title>
 </head>
