--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <p>On foot sports</p>
           </div>
           <div class="item">
-            <a target="_blank" href="swimming.html"><i class="fas fa-swimmer fa-3x"></i></a>
+            <a href="swimming.html"><i class="fas fa-swimmer fa-3x"></i></a>
             <p>Swimming Society</p>
           </div>
           <div class="item">
-            <a target="_blank" href="facilities.html"><i class="fas fa-dumbbell fa-3x"></i></a>
+            <a href="facilities.html"><i class="fas fa-dumbbell fa-3x"></i></a>
             <p>Sports facilities</p>
           </div>
         </div>
